# agentic-resolution-platform

./: .gitignore  LICENSE  Makefile  README.md
ai_agent/: .env.example  .gitignore  config.ini  config_dev.ini  config_prod.ini  config_staging.ini  langgraph.json  pyproject.toml
ai_agent/src/agent/: __init__.py  example_graph.py  file_ingest_graph.py  graph.py
ai_agent/src/agent/core/: __init__.py  checkpoint.py  config.py  constants.py  embedding.py  llm.py  logger.py  messages.py  output_identity.py  qdrant.py  splitter.py  stream_events.py  vectordb.py
ai_agent/src/agent/example_graph/: __init__.py  graph.py  nodes.py  state.py
ai_agent/src/agent/file_ingest/: __init__.py  graph.py  nodes.py  outputs.py  state.py
ai_agent/src/agent/integrations/: __init__.py
ai_agent/src/agent/integrations/mcp/: __init__.py  client.py  ecommerce_gateway.py  gateway_provider.py
ai_agent/src/agent/mcp/: mcp_client.py
ai_agent/src/agent/supervisor/: __init__.py  graph.py  nodes.py  prompts.py  state.py
ai_agent/src/agent/supervisor/ecommerce_action/: __init__.py  graph.py  nodes.py  prompts.py  (+1 more)
ai_agent/tests/: conftest.py  mock_ecommerce_gateway.py  mock_mcp_client.py
ai_agent/tests/integration_tests/: test_ecommerce_query_workflow.py  test_file_ingest.py  test_graph.py  test_supervisor_workflow.py
ai_agent/tests/provider_tests/: __init__.py  test_ingest_embedding_real_provider.py  test_policy_qa_real_llm.py  test_supervisor_routing_real_llm.py
ai_agent/tests/scripts/: build_test_vectordb.py
ai_agent/tests/test_data/: ingest_test_file_embedding.json  policy_qa_real_llm_response.json  preduild_embeddings_cache.py  query_embeddings_cache.json  supervisor_route_real_llm_response.json
ai_agent/tests/test_data/qdrant_prebuilt_db/: meta.json
ai_agent/tests/unit_tests/: test_agent_output_identity.py  test_configuration.py  test_ecommerce_action_graph.py  test_ecommerce_gateway.py  test_ecommerce_public_output_schemas.py  test_ecommerce_query_graph.py  test_embedding.py  test_file_ingest_outputs.py  test_llm.py  test_policy_qa_graph.py  test_policy_qa_outputs.py  test_policy_rag_prebuild.py  test_qdrant.py  test_stream_events.py  test_supervisor_graph.py  test_supervisor_state.py  test_vector_search.py
mcp_server/: README.md  config.ini  config_dev.ini  config_prod.ini  config_staging.ini  pyproject.toml
mcp_server/scripts/: export_mcp_metadata.py
mcp_server/seeds/data/: ecommerce_order_items.csv  ecommerce_orders.csv  ecommerce_shipment_events.csv  ecommerce_shipments.csv  ecommerce_skus.csv  ecommerce_users.csv
mcp_server/seeds/scripts/: common.py  seed_ecommerce_orders.py  seed_ecommerce_skus.py  seed_ecommerce_users.py
mcp_server/src/: config.py  main.py
mcp_server/src/core/: database.py  logger.py
mcp_server/src/mcp_server/: config.py  main.py
mcp_server/src/mcp_server/core/: database.py  logger.py
mcp_server/src/mcp_server/models/: db_models.py
mcp_server/src/mcp_server/schemas/: example.py
mcp_server/src/mcp_server/services/: calculation_service.py
mcp_server/src/mcp_server/tools/: example.py
mcp_server/src/models/: db_models.py
mcp_server/src/schemas/: order.py  returns.py  user.py
mcp_server/src/services/: calculation_service.py  order_service.py  return_service.py  user_service.py
mcp_server/src/tools/: __init__.py  example.py  order_tools.py  returns_tools.py  user_tools.py
mcp_server/tests/: conftest.py  test_example_add.py  test_order.py  test_returns_tools.py  test_seeds.py  test_user.py
(+164 files in other folders)
