[project]
name = "agent"
version = "0.0.1"
description = "Starter template for making a new agent LangGraph."
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "langchain-google-genai==4.3.1",
    "langgraph==1.2.9",
    "python-dotenv==1.2.2",
    "loguru==0.7.3",
    "langgraph-checkpoint-sqlite==3.1.0",
    "qdrant-client==1.18.0",
    "langchain-text-splitters==1.1.2",
    "mcp==1.28.1",
]


[project.optional-dependencies]
dev = ["mypy==2.3.0", "ruff==0.15.22"]

[build-system]
requires = ["setuptools==79.0.1", "wheel==0.46.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "anyio==4.14.2",
    "langgraph-cli[inmem]==0.4.31",
    "mypy==2.3.0",
    "pytest==9.1.1",
    "ruff==0.15.22",
]

[tool.pytest.ini_options]
pythonpath = ["..", "src"]
