[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp_server"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Agentic Resolution Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "sqlmodel>=0.0.22",
    "loguru>=0.7.2",
    "starlette>=0.35.0",
    "uvicorn>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "anyio>=4.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["..", "src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
