[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "mcp_server"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Agentic Resolution Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp==1.28.1",
    "sqlmodel==0.0.39",
    "loguru==0.7.3",
    "starlette==1.3.1",
    "uvicorn==0.51.0",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "anyio==4.14.2",
]

[tool.pytest.ini_options]
pythonpath = ["..", "src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
